<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/dettagli_risparmio_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:text="@string/dettagli_piu_complessi"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lev0_perc"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lev0_descr"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="16dp" />



    <!-- Livello 1 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lev1_perc"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lev1_descr"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="16dp" />

    <!-- Livello 2 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lev2_perc"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lev2_descr"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="16dp" />

    <!-- Livello 3 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lev3_perc"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lev3_descr"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="16dp" />

    <!-- Livello 4 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lev4_perc"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lev4_descr"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>
</ScrollView>
