<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/risparmio_energetico_txt"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_margin="8dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_livelli"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/switch_description"
            android:layout_marginHorizontal="8dp"
            android:checked="true"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/leftLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/rightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quattro"
            android:textColor="@android:color/black"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_toEndOf="@id/leftLabel"
            android:layout_toStartOf="@id/rightLabel"
            android:layout_centerVertical="true"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:max="4"
            android:progress="0"
            />

    </RelativeLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="9">

        <TextView
            android:id="@+id/descrizione_levels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/livelli_attivi_durante_il_risparmio_energetico"/>

        <TextView
            android:id="@+id/livello_0_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black"
            android:text="@string/livello_0"/>

        <TextView
            android:id="@+id/livello_1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black"
            android:text="@string/livello_1"/>

        <TextView
            android:id="@+id/livello_2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black"
            android:text="@string/livello_2" />

        <TextView
            android:id="@+id/livello_3_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black"
            android:text="@string/livello_3"/>

        <TextView
            android:id="@+id/livello_4_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:text="@string/livello_4" />
    </LinearLayout>


</LinearLayout>