<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.DetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    <ImageView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/dettagli_fermata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="5dp"
        android:textStyle="bold"
        android:text="@string/dettagli_fermata" />


    <TextView
        android:id="@+id/fermata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:text="@string/fermata_senza_parametro" />

    <TextView
        android:id="@+id/distanza_fermata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:text="@string/distanza_fermata_senza_parametro" />

    <TextView
        android:id="@+id/prossima_corsa_andata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:visibility="visible"
        android:text="@string/prossima_corsa_andata_senza_parametro" />

    <TextView
        android:id="@+id/prossima_corsa_ritorno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:visibility="visible"
        android:text="@string/prossima_corsa_ritorno_senza_parametro" />

    <androidx.cardview.widget.CardView
        android:id="@+id/maggiori_dettagli"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/purple_200">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/maggiori_dettagli_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/maggiori_dettagli"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav" />

</LinearLayout>