<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

        <ImageView
            android:id="@+id/immagine_fermata"
            android:layout_width="386dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/immagine_settings_impostazioni"
            android:src="@drawable/pin_drop_24dp" />


        <TextView
            android:id="@+id/fermata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/fermata_senza_parametro" />

        <TextView
            android:id="@+id/descrizione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/descrizione_senza_parametro" />

        <TextView
            android:id="@+id/distanza_fermata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/distanza_fermata_senza_parametro" />

        <TextView
            android:id="@+id/prossima_corsa_andata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:text="@string/prossima_corsa_andata_senza_parametro" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/corsa1_and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/corsa2_and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/corsa3_and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/prossima_corsa_ritorno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:text="@string/prossima_corsa_ritorno_senza_parametro" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/corsa1_rit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/corsa2_rit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/corsa3_rit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>
